feat: Add new converters and entity classes for spider configuration
- Introduced `InsertConfigConverter` and `MoveCharConfigConverter` for handling JSON attributes.
- Created new entity classes: `InsertConfig`, `MoveCharConfig`, `CopySpecifiedValueToConfig`, `CurrentTimeFormatOption`, `DeleteConfig`, `ExtractionCondition`, and updated `ExtractionRule` to include new configurations.
- Enhanced `ValuePipeline` to support new conversion types and configurations.
- Refactored `ScrapyPaginationServiceImpl` to improve string list handling and extraction logic.
- Updated `Global` utility class with new enums for timezones and conversion types.
- Added utility methods for string manipulation and current time formatting.
- Migrated application properties from `.properties` to `.yml` format for better structure.
- Added unit tests for new utility methods and ensured existing functionality remains intact.